# gpubnb

./: .env.example  .gitignore  README.md  eslint.config.mjs  next-env.d.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.codex/: config.toml  mongodb-mcp.ps1
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/_components/: marketplace-shell.tsx
app/api/consumers/: route.ts
app/auth/: page.tsx
app/earnings/: page.tsx
app/jobs/: page.tsx
app/login/: page.tsx
app/providers/: page.tsx
app/settings/: page.tsx
app/setup/: page.tsx
components/: nav.tsx  status-pill.tsx
components/ui/: button.tsx  card.tsx
docs/: worker-app-architecture.md
lib/: db.ts  ledger.ts  marketplace.ts  mock-store.ts  mongodb.ts  mvp.ts  observability.ts  pricing.test.ts  pricing.ts  provider-auth.test.ts  provider-auth.ts  scheduling.ts  solana.test.ts  solana.ts  utils.ts
lib/models/: Assignment.ts  Consumer.ts  Job.ts  JobEvent.ts  LedgerEntry.ts  Machine.ts  Provider.ts  index.ts
lib/types/: index.ts
mongodb/: indexes.js  schema.md  seed.js
scripts/: create-master-wallet.ts  env.ts  fund-consumer-wallets.ts  seed.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  worker_manager.rs
src/hooks/: use-worker.tsx
src/lib/: format.ts  tauri-adapter.ts  tauri-commands.ts  tauri-events.ts  worker-client.ts  worker-runtime.ts
src/mocks/: worker-data.ts
src/types/: worker.ts
worker/: api.ts  config.ts  executor.ts  heartbeat.ts  index.ts  poller.ts  register.ts
worker-runner/src/: config.ts
(+40 files in other folders)
